2003-04-05  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c (RedrawItem): Fixed input fields not getting cleared
	on multiline paste.

2003-04-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (Scroll):
	fixed shaking of viewport when scrolling past top/left border

2003-03-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/FvwmPager.1:
	discourage usage of "Label" option

2003-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmAuto/FvwmAuto.c (main):
	* FvwmAuto/FvwmAuto.1:
	A delay of 0 is no longer valid.  The new minimum is 1.
	Send XSync after any action to force fvwm to synchronize with the X
	server; reduces chance of race condition in case the connection to the
	X server is slow

2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (check_in_window):
	* FvwmIconMan/fvwm.c (icon_location):
	* FvwmIconMan/winlist.c (check_resolution):
	(check_win_complete):
	fixed several window and icon resolution bugs

2003-03-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/FvwmCommand.c (main):
	add a screen number to the DISPLAY if necessary

2003-03-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScroll/Makefile.am:
	linkage fix

	* FvwmWinList/FvwmWinList.c (MakeMeWindow):
	removed useless FQueryPointerCall
	(StartMeUp_I):
	removed debug XSynchonize call

	* FvwmWinList/FvwmWinList.c (StartMeUp_II):
	(StartMeUp_I):
	(MakeMeWindow):
	* FvwmWharf/FvwmWharf.c (CreateWindow):
	* FvwmTaskBar/FvwmTaskBar.c (StartMeUp):
	(ProcessMessage):
	* FvwmScroll/GrabWindow.c (CreateWindow):
	* FvwmPager/x_pager.c (initialize_pager):
	* FvwmIdent/FvwmIdent.c (list_end):
	* FvwmIconMan/x.c (create_manager_window):
	* FvwmIconBox/FvwmIconBox.c (CreateWindow):
	* FvwmForm/FvwmForm.c (OpenWindows):
	* FvwmDragWell/fvwmDragWell.c (createWindow):
	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	(CreateUberButtonWindow):
	* FvwmBanner/FvwmBanner.c (main):
	adapted to hack to specify screen origin in geometry and StartsOnScreen